--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 										<div class="form-group">
 											<select class="selectpicker form-control" style="height: auto;border: 2px solid var(--grundfarbe);font-size: 14px;"
 												onchange="classicshishawahl()" id="classicshishaoutput" data-width="auto">
-												<option data-img="img/product-preview.png" selected>Geschmack wählen</option>
+												<option data-img="img/product-preview.png" id="platzhalter" disabled selected>Geschmack wählen</option>
 												<option data-img="img/product-preview.png" data-tabak="Al-Fakir">Doppel-Apfel(Al-Fakir)</option>
 												<option data-img="img/product-preview.png" data-tabak="Al-Fakir">Traube-Minze(Al-Fakir)</option>
 												<option data-img="img/product-preview.png" data-tabak="Kilim">Zitrone-Minze(Kilim)</option>
@@ -193,8 +193,8 @@
 								</div>
 									<div class="row">
 									<div class="col-sm-12" style="min-width: 100%;">
-										<a href="#0" id="classicshishainput" value="" style="min-width: 100%; background: var(--grundfarbe);" class="cd-add-to-cart js-cd-add-to-cart"
-											data-price="8.00" data-art="shisha" data-anzahl="1" data-name="Classic-Shisha">In den Warenkorb</a>
+										<button href="#0" id="classicshishainput" disabled value="" style="min-width: 100%; background: var(--grundfarbe);" class="cd-add-to-cart js-cd-add-to-cart"
+											data-price="8.00" data-art="shisha" data-anzahl="1" data-name="Classic-Shisha">In den Warenkorb</button>
 									</div>
 								</div>
 								<!--
@@ -235,7 +235,7 @@
 								<div class="form-group" >
 									<select class="selectpicker form-control" style="height: auto;background-color: var(--hellgrau);color: var(--grundfarbe);border: 2px solid var(--grundfarbe);font-size: 14px;"
 										onchange="premiumshishawahl()" id="premiumshishaoutput" data-width="auto">
-										<option data-img="img/product-preview.png" selected>Geschmack wählen</option>
+										<option data-img="img/product-preview.png" id="platzhalter" disabled selected>Geschmack wählen</option>
 										<option data-img="img/product-preview.png" data-tabak="TP">Ringel-Rangel(TP)</option>
 										<option data-img="img/product-preview.png" data-tabak="TP">Okolom(TP)</option>
 										<option data-img="img/product-preview.png" data-tabak="187">Hamburg(187)</option>
@@ -259,8 +259,8 @@
 						</div>
 						<div class="row" style="min-width: 100%;">
 							<div class="col-sm-12" style="min-width: 100%;">
-								<a href="#0" id="premiumshishainput" style="min-width: 100%;  background: var(--grundfarbe);" value="" class="cd-add-to-cart js-cd-add-to-cart"
-									data-price="10.00" data-art="shisha" data-anzahl="1" data-name="Premium-Shisha">In den Warenkorb</a>
+								<button href="#0" id="premiumshishainput" disabled style="min-width: 100%;  background: var(--grundfarbe);" value="" class="cd-add-to-cart js-cd-add-to-cart"
+									data-price="10.00" data-art="shisha" data-anzahl="1" data-name="Premium-Shisha">In den Warenkorb</button>
 							</div>
 						</div>
 						<!--
@@ -301,7 +301,7 @@
 								<div class="form-group">
 									<select class="selectpicker form-control" style="height: auto;background-color: var(--grundfarbe);color:white;border: 2px solid var(--secondary);font-size: 14px;"
 										onchange="exclusivshishawahl()" id="exclusivshishaoutput" data-width="auto">
-										<option data-img="img/product-preview.png" selected>Geschmack wählen</option>
+										<option data-img="img/product-preview.png" id="platzhalter" disabled selected>Geschmack wählen</option>
 										<option data-img="img/product-preview.png" data-tabak="Fumari">Ceylon-Chi/Spy-Chi(Fumari)</option>
 										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Lemon-Chill(SocialSmoke)</option>
 										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Watermelon-Chill(SocialSmoke)</option>
@@ -324,8 +324,8 @@
 						
 						<div class="row">
 							<div class="col-sm-12" style="min-width: 100%;">
-								<a href="#0" id="exclusivshishainput" value="" style="min-width: 100%; background: var(--secondary); color: var(--grundfarbe);" class="cd-add-to-cart js-cd-add-to-cart"
-									data-price="12.00" data-art="shisha" data-anzahl="1" data-name="Exclusiv-Shisha">In den Warenkorb</a>
+								<button href="#0" id="exclusivshishainput" value="" disabled style="min-width: 100%; background: var(--secondary); color: var(--grundfarbe);" class="cd-add-to-cart js-cd-add-to-cart"
+									data-price="12.00" data-art="shisha" data-anzahl="1" data-name="Exclusiv-Shisha">In den Warenkorb</button>
 							</div>
 						</div>
 						<!--
@@ -380,7 +380,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 								<div class="form-group">
 									<select class="selectpicker form-control" style="height: auto; border: 2px solid var(--grundfarbe);font-size: 14px;"
 										onchange="softdrinkswahl()" id="softdrinksoutput" data-width="auto">
-										<option selected>Getränk wählen</option>
+										<option id="platzhalter" disabled selected>Getränk wählen</option>
 										<option value="1.50" data-img="img/cola.svg" data-name="Cola(0,33l)">Cola 0.33l</option>
 										<option value="1.50" data-img="img/colazero.svg" data-name="Cola-Zero(0,33l)">Cola Zero 0.33l</option>
 										<option value="1.50" data-img="img/fanta.svg" data-name="Fanta(0,33l)">Fanta 0.33l</option>
@@ -403,9 +403,9 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 						</div>
 						<div class="row">
 							<div class="col-sm-12" style="min-width: 100%;">
-								<a href="#0" id="softdrinksinput" style="min-width: 100%;  background: var(--grundfarbe);" value=""
+								<button href="#0" id="softdrinksinput" disabled style="min-width: 100%;  background: var(--grundfarbe);" value=""
 									class="cd-add-to-cart js-cd-add-to-cart" data-anzahl="" data-art="softdrink" data-img="" data-price="" data-name="Softdrink">In den
-									Warenkorb</a>
+									Warenkorb</button>
 							</div>
 						</div>
 						<!--
@@ -446,7 +446,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 								<div class="form-group">
 									<select class="selectpicker form-control" style="height: auto; border: 2px solid var(--grundfarbe); font-size: 14px;"
 										onchange="alkoholwahl()" id="alkoholoutput" data-width="auto">
-										<option value="" selected>Flasche wählen</option>
+										<option value="" id="platzhalter" disabled selected>Flasche wählen</option>
 										<option value="15.00" data-img="img/threesixty.svg" data-name="ThreeSixty(0,7l)">Three Sixty Vodka 0,7 l</option>
 										<option value="15.00" data-img="img/absolutvodka.svg" data-name="Absolout-Vodka(0,7l)">Absolut Vodka 0,7l</option>
 										<option value="15.00" data-img="img/bacardi.svg" data-name="Bacardi(0,7l)">Bacardi 0,7l</option>
@@ -464,9 +464,9 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 						</div>
 						<div class="row">
 							<div class="col-sm-12" style="min-width: 100%;">
-								<a href="#0" id="alkoholinput" value="" style="min-width: 100%; background: var(--grundfarbe);"
+								<button href="#0" id="alkoholinput" value="" disabled style="min-width: 100%; background: var(--grundfarbe);"
 									class="cd-add-to-cart js-cd-add-to-cart" data-art="alkohol" data-img="" data-price="" data-name="Flasche">In den
-									Warenkorb</a>
+									Warenkorb</button>
 							</div>
 						</div>
 					</div>
@@ -507,7 +507,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 								<div class="form-group">
 									<select class="selectpicker form-control" style="height: auto;border: 2px solid var(--grundfarbe);font-size: 14px;"
 										onchange="snackswahl()" id="snacksoutput" data-width="auto">
-										<option selected>Snack wählen </option>
+										<option id="platzhalter" disabled selected>Snack wählen </option>
 										<option value="2.00" data-img="img/product-preview.png" data-name="Erdnuesse(300g)">Erdnüsse 300g</option>
 										<option value="1.00" data-img="img/product-preview.png" data-name="NicNac's(200g)">Nic Nac's 200g</option>
 										<option value="3.00" data-img="img/product-preview.png" data-name="Salzbrezel(200g)">Salzbrezel 200g</option>
@@ -524,9 +524,9 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 						</div>
 						<div class="row">
 							<div class="col-sm-12" style="min-width: 100%;">
-								<a href="#0" id="snacksinput" value="" style="min-width: 100%;background: var(--grundfarbe);"
+								<button href="#0" id="snacksinput" value="" disabled style="min-width: 100%;background: var(--grundfarbe);"
 									class="cd-add-to-cart js-cd-add-to-cart" data-art="snack" data-img="" data-price="" data-name="Snack">In den
-									Warenkorb</a>
+									Warenkorb</button>
 							</div>
 						</div>
 						<!--
@@ -1108,6 +1108,10 @@ $(document).ready(function(){
 		var selValue3 = selObj.options[selObj.selectedIndex].getAttribute("data-img");
 		var selValue4 = selObj.options[selObj.selectedIndex].getAttribute("data-tabak");
 		var selValue5 = selObj2.options[selObj2.selectedIndex].text;
+		var selValue6 = selObj.options[selObj.selectedIndex].id;
+		if (selValue6 != "platzhalter"){
+			document.getElementById("classicshishainput").disabled = false;
+		}
 		console.log(selValue);
 		//Setting Value
 		document.getElementById("classicshishainput").value = selValue;
@@ -1129,6 +1133,10 @@ $(document).ready(function(){
 		var selValue3 = selObj.options[selObj.selectedIndex].getAttribute("data-img");
 		var selValue4 = selObj.options[selObj.selectedIndex].getAttribute("data-tabak");
 		var selValue5 = selObj2.options[selObj2.selectedIndex].text;
+		var selValue6 = selObj.options[selObj.selectedIndex].id;
+		if (selValue6 != "platzhalter"){
+			document.getElementById("premiumshishainput").disabled = false;
+		}
 		//Setting Value
 		document.getElementById("premiumshishainput").value = selValue;
 		document.getElementById("premiumshishainput").setAttribute('data-img', selValue3);
@@ -1149,6 +1157,10 @@ $(document).ready(function(){
 		var selValue3 = selObj.options[selObj.selectedIndex].getAttribute("data-img");
 		var selValue4 = selObj.options[selObj.selectedIndex].getAttribute("data-tabak");
 		var selValue5 = selObj2.options[selObj2.selectedIndex].text;
+		var selValue6 = selObj.options[selObj.selectedIndex].id;
+		if (selValue6 != "platzhalter"){
+			document.getElementById("exclusivshishainput").disabled = false;
+		}
 		//Setting Value
 		document.getElementById("exclusivshishainput").value = selValue;
 		document.getElementById("exclusivshishainput").setAttribute('data-img', selValue3);
@@ -1162,6 +1174,9 @@ $(document).ready(function(){
 		document.getElementById("exclusivshishainput").setAttribute('data-anzahl', selValue);
 		document.getElementById("exclusivanzahlpreis").innerHTML = selValue*12.00 + " €";
 	}
+	function checkexclusiv(){
+		
+	}
 	function softdrinkswahl() {
 		//Getting Value
 		var selObj = document.getElementById("softdrinksoutput");
@@ -1171,7 +1186,10 @@ $(document).ready(function(){
 		var selValue2 = selObj.options[selObj.selectedIndex].value;
 		var selValue3 = selObj.options[selObj.selectedIndex].getAttribute("data-img");
 		var selValue4 = selObj3.options[selObj3.selectedIndex].text;
-
+		var selValue6 = selObj.options[selObj.selectedIndex].id;
+		if (selValue6 != "platzhalter"){
+			document.getElementById("softdrinksinput").disabled = false;
+		}
 		//Setting Value
 		document.getElementById("softdrinksinput").value = selValue;
 		document.getElementById("softdrinksvalueinput").innerHTML = selObj2*selValue4 + " €";
@@ -1196,7 +1214,10 @@ $(document).ready(function(){
 		var selValue2 = selObj.options[selObj.selectedIndex].value;
 		var selValue3 = selObj.options[selObj.selectedIndex].getAttribute("data-img");
 		var selValue4 = selObj3.options[selObj3.selectedIndex].text;
-
+		var selValue6 = selObj.options[selObj.selectedIndex].id;
+		if (selValue6 != "platzhalter"){
+			document.getElementById("alkoholinput").disabled = false;
+		}
 		//Setting Value
 		document.getElementById("alkoholinput").value = selValue;
 		document.getElementById("alkoholvalueinput").innerHTML = selObj2*selValue4 + " €";
@@ -1221,7 +1242,10 @@ $(document).ready(function(){
 		var selValue2 = selObj.options[selObj.selectedIndex].value;
 		var selValue3 = selObj.options[selObj.selectedIndex].getAttribute("data-img");
 		var selValue4 = selObj3.options[selObj3.selectedIndex].text;
-
+		var selValue6 = selObj.options[selObj.selectedIndex].id;
+		if (selValue6 != "platzhalter"){
+			document.getElementById("snacksinput").disabled = false;
+		}
 		//Setting Value
 		document.getElementById("snacksinput").value = selValue;
 		document.getElementById("snacksvalueinput").innerHTML = selObj2*selValue4 + " €";
