--- a/index.html
+++ b/index.html
@@ -134,10 +134,25 @@
 			-->
 			</div>
 			<section id="section10" class="demo" style="max-height: 15%; background: var(--third); z-index: 1;">
-				<a href="#auswahl_shisha" style="z-index: 3;"><span></span></a>
+				<a href="#wiegehtdas" style="z-index: 3;"><span></span></a>
 			</section>
 		</div>
 
+		<div id="wiegehtdas" class="container-fluid " style="background: linear-gradient(
+	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
+	<h4 style="text-align: center; font-size: 40px;">Wie funktioniert Shisha2you?</h4>
+	<div class="middle">
+		<div class="row">
+				<div class="col-sm-3"><h4>Shisha + Getränk/Snack in den Warenkorb legen...</h4></div>
+				<div class="col-sm-3"><h4>Standort freigeben und WhatsApp-Bestellung starten...</h4></div>
+				<div class="col-sm-3"><h4>Wir machen uns sofort auf dem Weg zu dir.</h4></div>
+				<div class="col-sm-3"><h4>Genieß die von uns vorbereitete Shisha. Du musst dich um nichts weiteres kümmern.</h4></div>
+		</div>
+	</div>
+
+	<section id="section06" class="demo" style="max-height: 15%; background: var(--third); z-index: 1;">
+			<a href="#auswahl_shisha" ><span></span></a>
+	</section>
 
 <div id="auswahl_shisha" class="container-fluid " style="background: linear-gradient(
 	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
@@ -404,7 +419,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 						<div class="row">
 							<div class="col-sm-12" style="min-width: 100%;">
 								<button href="#0" id="softdrinksinput" disabled style="min-width: 100%;  background: var(--grundfarbe);" value=""
-									class="cd-add-to-cart js-cd-add-to-cart" data-anzahl="" data-art="softdrink" data-img="" data-price="" data-name="Softdrink">In den
+									class="cd-add-to-cart js-cd-add-to-cart" data-anzahl="1" data-art="softdrink" data-img="" data-price="" data-name="Softdrink">In den
 									Warenkorb</button>
 							</div>
 						</div>
@@ -465,7 +480,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 						<div class="row">
 							<div class="col-sm-12" style="min-width: 100%;">
 								<button href="#0" id="alkoholinput" value="" disabled style="min-width: 100%; background: var(--grundfarbe);"
-									class="cd-add-to-cart js-cd-add-to-cart" data-art="alkohol" data-img="" data-price="" data-name="Flasche">In den
+									class="cd-add-to-cart js-cd-add-to-cart" data-anzahl="1" data-art="alkohol" data-img="" data-price="" data-name="Flasche">In den
 									Warenkorb</button>
 							</div>
 						</div>
@@ -525,7 +540,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 						<div class="row">
 							<div class="col-sm-12" style="min-width: 100%;">
 								<button href="#0" id="snacksinput" value="" disabled style="min-width: 100%;background: var(--grundfarbe);"
-									class="cd-add-to-cart js-cd-add-to-cart" data-art="snack" data-img="" data-price="" data-name="Snack">In den
+									class="cd-add-to-cart js-cd-add-to-cart" data-anzahl="1" data-art="snack" data-img="" data-price="" data-name="Snack">In den
 									Warenkorb</button>
 							</div>
 						</div>
