--- a/index.html
+++ b/index.html
@@ -143,16 +143,49 @@
 	<h4 style="text-align: center; font-size: 40px;">Wie funktioniert Shisha2you?</h4>
 	<div class="middle">
 		<div class="row">
-				<div class="col-sm-3"><h4>Shisha + Getränk/Snack in den Warenkorb legen...</h4></div>
-				<div class="col-sm-3"><h4>Standort freigeben und WhatsApp-Bestellung starten...</h4></div>
-				<div class="col-sm-3"><h4>Wir machen uns sofort auf dem Weg zu dir.</h4></div>
-				<div class="col-sm-3"><h4>Genieß die von uns vorbereitete Shisha. Du musst dich um nichts weiteres kümmern.</h4></div>
+			<div class="col-sm-3">
+				<div class="card bg-light"
+					style="min-width: 100%; height: 90%; border-radius: 1rem;padding: 50px 5px 50px 5px; background: rgba(255, 255, 255, 0); box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">
+					<h4>
+						<div style="background: var(--grundfarbe); color: white;box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">1. </div><br>Shisha + Getränk/ Snack wählen und in
+						den Warenkorb legen...
+					</h4><br><img style="padding:10px 10px;object-fit: cover;" src="img/wiegehtdas1.svg" />
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="card bg-light"
+					style="min-width: 100%; height: 90%; border-radius: 1rem;padding: 60px 5px 60px 5px; background: rgba(255, 255, 255, 0); box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">
+					<h4>
+						<div style="background: var(--grundfarbe); color: white;box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">2.</div><br>Standort freigeben und
+						WhatsApp-Bestellung starten...
+					</h4><br><img style="padding:10px 10px;object-fit: cover;" src="img/wiegehtdas2.svg" />
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="card bg-light"
+					style="min-width: 100%; height: 90%; border-radius: 1rem;padding: 60px 5px 60px 5px; background: rgba(255, 255, 255, 0); box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">
+					<h4>
+						<div style="background: var(--grundfarbe); color: white;box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">3. </div><br>Wir machen uns sofort auf dem Weg zu
+						dir mit der Shisha
+					</h4><br><img style="padding:10px 10px;object-fit: cover;" src="img/wiegehtdas3.svg" />
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="card bg-light"
+					style="min-width: 100%; height: 90%; border-radius: 1rem;padding: 50px 5px 50px 5px; background: rgba(255, 255, 255, 0); box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">
+					<h4>
+						<div style="background: var(--grundfarbe); color: white;box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);">4. </div><br>Genieß die Shisha... Wir holen sie
+						wieder bei dir ab.
+					</h4><br><img style="padding:10px 10px;object-fit: cover;" src="img/wiegehtdas4.svg" />
+				</div>
+			</div>
 		</div>
 	</div>
-
+</div>
 	<section id="section06" class="demo" style="max-height: 15%; background: var(--third); z-index: 1;">
 			<a href="#auswahl_shisha" ><span></span></a>
 	</section>
+	<hr class="style-two">
 
 <div id="auswahl_shisha" class="container-fluid " style="background: linear-gradient(
 	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
