--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
 											<select class="selectpicker form-control" style="height: auto;border: 2px solid var(--grundfarbe);font-size: 14px;"
 												onchange="classicshishawahl()" id="classicshishaoutput" data-width="auto">
 												<option data-img="img/product-preview.png" id="platzhalter" disabled selected>Geschmack wählen</option>
-												<option data-img="img/product-preview.png" data-tabak="Al-Fakir">Doppel-Apfel(Al-Fakir)</option>
-												<option data-img="img/product-preview.png" data-tabak="Al-Fakir">Traube-Minze(Al-Fakir)</option>
+												<option data-img="img/shishatabak/alfakher2.svg" data-tabak="Al-Fakher">Doppel-Apfel(Al-Fakher)</option>
+												<option data-img="img/shishatabak/alfakher3.svg" data-tabak="Al-Fakher">Traube-Minze(Al-Fakher)</option>
 												<option data-img="img/product-preview.png" data-tabak="Kilim">Zitrone-Minze(Kilim)</option>
-												<option data-img="img/product-preview.png" data-tabak="Royal">Pitaya(Royal)</option>
-												<option data-img="img/product-preview.png" data-tabak="Gama">Cold-Peach(Gama)</option>
+												<option data-img="img/shishatabak/pintaya.svg" data-tabak="Royal">Pintaya(Royal)</option>
+												<option data-img="img/shishatabak/coldpeah.svg" data-tabak="Gama">Cold-Peach(Gama)</option>
 											</select>
 										</div>
 									</div>
@@ -284,13 +284,13 @@
 									<select class="selectpicker form-control" style="height: auto;background-color: var(--hellgrau);color: var(--grundfarbe);border: 2px solid var(--grundfarbe);font-size: 14px;"
 										onchange="premiumshishawahl()" id="premiumshishaoutput" data-width="auto">
 										<option data-img="img/product-preview.png" id="platzhalter" disabled selected>Geschmack wählen</option>
-										<option data-img="img/product-preview.png" data-tabak="TP">Ringel-Rangel(TP)</option>
-										<option data-img="img/product-preview.png" data-tabak="TP">Okolom(TP)</option>
-										<option data-img="img/product-preview.png" data-tabak="187">Hamburg(187)</option>
-										<option data-img="img/product-preview.png" data-tabak="Aqua Menta">Aqua-Black-Box(AquaMenta)</option>
-										<option data-img="img/product-preview.png" data-tabak="Dalia">Love66(Dalia)</option>
-										<option data-img="img/product-preview.png" data-tabak="Dschinni">Lemon-Fresh(Dschinni)</option>
-										<option data-img="img/product-preview.png" data-tabak="Dschinni">Da-Bomb(Dschinni)</option>
+										<option data-img="img/shishatabak/ringelrangel.svg" data-tabak="TP">Ringel-Rangel(TP)</option>
+										<option data-img="img/shishatabak/okolom.svg" data-tabak="TP">Okolom(TP)</option>
+										<option data-img="img/shishatabak/hamburg.svg" data-tabak="187">Hamburg(187)</option>
+										<option data-img="img/shishatabak/aqua.svg" data-tabak="Aqua Menta">Aqua-Black-Box(AquaMenta)</option>
+										<option data-img="img/shishatabak/love66.svg" data-tabak="Dalia">Love66(Dalia)</option>
+										<option data-img="img/shishatabak/lmfrsh.svg" data-tabak="Dschinni">Lemon-Fresh(Dschinni)</option>
+										<option data-img="img/shishatabak/dabomb.svg" data-tabak="Dschinni">Da-Bomb(Dschinni)</option>
 									</select>
 								</div>
 							</div>
@@ -350,10 +350,10 @@
 									<select class="selectpicker form-control" style="height: auto;background-color: var(--grundfarbe);color:white;border: 2px solid var(--secondary);font-size: 14px;"
 										onchange="exclusivshishawahl()" id="exclusivshishaoutput" data-width="auto">
 										<option data-img="img/product-preview.png" id="platzhalter" disabled selected>Geschmack wählen</option>
-										<option data-img="img/product-preview.png" data-tabak="Fumari">Ceylon-Chi/Spy-Chi(Fumari)</option>
-										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Lemon-Chill(SocialSmoke)</option>
-										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Watermelon-Chill(SocialSmoke)</option>
-										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Wildberry-Chill(SocialSmoke)</option>
+										<option data-img="img/shishatabak/ceylonchi.svg" data-tabak="Fumari">Ceylon-Chi/Spy-Chi(Fumari)</option>
+										<option data-img="img/shishatabak/lmnchill.svg" data-tabak="Social Smoke">Lemon-Chill(SocialSmoke)</option>
+										<option data-img="img/shishatabak/wtrmlchill.svg" data-tabak="Social Smoke">Watermelon-Chill(SocialSmoke)</option>
+										<option data-img="img/shishatabak/wildbrychill.svg" data-tabak="Social Smoke">Wildberry-Chill(SocialSmoke)</option>
 									</select>
 								</div>
 							</div>
