--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
 			-->
 		<div class="header-wrapper" style="min-height: 100%;">
 			<div class="zoominheader" style="max-height: 85%;background: var(--secondary); overflow: hidden;">
-				<div class="wiegehtdas" style="display:none; top: 60%;position: relative;"><h4><br>1.Shisha wählen</h4>
+				<div class="wiegehtdas fade" style="display:none; top: 60%;position: relative;"><h4><br>1.Shisha wählen</h4>
 					<img style="max-height:40%; text-align:center; padding:10px 10px;object-fit: cover;" src="img/wiegehtdas1.svg" />
 				</div>
-				<div class="wiegehtdas" style="display:none;top: 60%;position: relative;"><h4><br>2.WhatsApp-Bestellung</h4>
+				<div class="wiegehtdas fade" style="display:none;top: 60%;position: relative;"><h4><br>2.WhatsApp-Bestellung</h4>
 					<img style="max-height:40%; text-align:center; padding:10px 10px;object-fit: cover;" src="img/wiegehtdas2.svg" />
 				</div>
-				<div class="wiegehtdas" style="display:none;top: 60%;position: relative;"><h4><br>3.Lieferung...</h4>
+				<div class="wiegehtdas fade" style="display:none;top: 60%;position: relative;"><h4><br>3.Lieferung...</h4>
 					<img style="max-height:40%; text-align:center; padding:10px 10px;object-fit: cover;" src="img/wiegehtdas3.svg" />
 				</div>
-				<div class="wiegehtdas" style="display:none;top: 60%;position: relative;"><h4><br>4.Shisha genießen!</h4>
+				<div class="wiegehtdas fade" style="display:none;top: 60%;position: relative;"><h4><br>4.Shisha genießen!</h4>
 					<img style="max-height:40%; text-align:center; padding:10px 10px;object-fit: cover;" src="img/wiegehtdas4.svg" />
 				</div>
 			</div>
