--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 			<br>
 			<hr class="style-two">
 			<p><h4>Freitags - Samstags</h4></p>
-			<p><h5><b>Vermietung ab 15:00 Uhr -  Abholung bis spätestens Sonntag 02:00 Uhr</b></h5></p>
+			<p><h5><b>Vermietung ab 15:00 Uhr -  Abholung bis spätestens 02:00 Uhr am folgenden Tag</b></h5></p>
 </div>
 	</div>
 </div>
@@ -774,7 +774,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 			</div>
 			<footer class="cd-cart__footer" >
 				
-				<a style="font-size: 16px; background: #25d366;color: white;" class="cd-cart__checkout" id="warenkorb-whatsapp" onclick="return getWarenkorb()">
+				<a style="font-size: 16px; background: #25d366;color: white;" class="cd-cart__checkout" target="_blank" id="warenkorb-whatsapp" onclick="return getWarenkorb()">
           <em><i class="fab fa-whatsapp"></i> WhatsApp-Bestellung - €<span>0</span><div class="icon"></div>
             <!--<svg class="icon icon--sm" viewBox="0 0 24 24"><g fill="none" stroke="currentColor"><line stroke-width="2" stroke-linecap="round" stroke-linejoin="round" x1="3" y1="12" x2="21" y2="12"/><polyline stroke-width="2" stroke-linecap="round" stroke-linejoin="round" points="15,6 21,12 15,18 "/></g>
             </svg>-->
