--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		<!-- <a class="btn_telefon slideanim2" href="tel:+51112345667" ><i class="material-icons">phone</i></a> -->
 		<!-- <a class="btn_whatsapp slideanim2" href="https://api.whatsapp.com/send?phone=491762295702" ><i class="fab fa-whatsapp"></i></a> -->
 
-		<img class="slideanim3" src="img/logo.png" style="position: absolute;display: block;margin-left: auto;margin-right: auto;width: 100%;max-width: 800px;max-height: 80%;z-index: 1;top: 20%;right: 0px;left: 0px;padding-left: 1px;padding-right: 1px;"/>
+		<img class="slideanim3" src="img/logo.png" style="position: absolute;display: block;margin-left: auto;margin-right: auto;width: 100%;max-width: 800px;max-height: 80%;z-index: 1;top: 10%;right: 0px;left: 0px;padding-left: 1px;padding-right: 1px;"/>
 
 		<!--
 		<img class="slideanim3" src="img/shisha2.png" style="position: absolute;display: block;margin-left: auto;margin-right: auto;width: 100%;max-width: 70px;max-height: 100px;z-index: 2;top: 20%;right: 0px;left: 0px;"/>
@@ -127,16 +127,16 @@
 			-->
 		<div class="header-wrapper" style="min-height: 100%;">
 			<div class="zoominheader" style="max-height: 85%;background: var(--secondary); overflow: hidden;">
-				<div class="wiegehtdas fade" style="display:none; top: 60%;position: relative;"><h4><br>1.Shisha wählen</h4>
+				<div class="wiegehtdas fade" style="display:none; top: 50%;position: relative;"><h4><br>1.Shisha wählen</h4>
 					<img style="max-height:40%; text-align:center; padding:10px 10px;object-fit: cover;" src="img/wiegehtdas1.svg" />
 				</div>
-				<div class="wiegehtdas fade" style="display:none;top: 60%;position: relative;"><h4><br>2.WhatsApp-Bestellung</h4>
+				<div class="wiegehtdas fade" style="display:none;top: 50%;position: relative;"><h4><br>2.WhatsApp-Bestellung</h4>
 					<img style="max-height:40%; text-align:center; padding:10px 10px;object-fit: cover;" src="img/wiegehtdas2.svg" />
 				</div>
-				<div class="wiegehtdas fade" style="display:none;top: 60%;position: relative;"><h4><br>3.Lieferung...</h4>
+				<div class="wiegehtdas fade" style="display:none;top: 50%;position: relative;"><h4><br>3.Lieferung...</h4>
 					<img style="max-height:40%; text-align:center; padding:10px 10px;object-fit: cover;" src="img/wiegehtdas3.svg" />
 				</div>
-				<div class="wiegehtdas fade" style="display:none;top: 60%;position: relative;"><h4><br>4.Shisha genießen!</h4>
+				<div class="wiegehtdas fade" style="display:none;top: 50%;position: relative;"><h4><br>4.Shisha genießen!</h4>
 					<img style="max-height:40%; text-align:center; padding:10px 10px;object-fit: cover;" src="img/wiegehtdas4.svg" />
 				</div>
 			</div>
@@ -997,6 +997,7 @@ data-close-text="Got it!">
 
 <!--///////// SCRIPTE ///////////-->
 <script>
+	// ##### Wiegehtdas SLIDER ######
 	var slideIndex = 0;
 	showSlides();
 	
@@ -1010,7 +1011,7 @@ data-close-text="Got it!">
 	  if (slideIndex > slides.length) {slideIndex = 1}    
 	  
 	  slides[slideIndex-1].style.display = "block";  
-	  setTimeout(showSlides, 4000); // Change image every 2 seconds
+	  setTimeout(showSlides, 3000); // Change image every 2 seconds
 	}
 	</script>
 
