--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
 											<select class="selectpicker form-control" style="height: auto;border: 2px solid var(--grundfarbe);font-size: 14px;"
 												onchange="classicshishawahl()" id="classicshishaoutput" data-width="auto">
 												<option data-img="img/product-preview.png" id="platzhalter" disabled selected>Geschmack wählen</option>
-												<option data-img="img/shishatabak/alfakher2.svg" data-tabak="Al-Fakher">Doppel-Apfel(Al-Fakher)</option>
-												<option data-img="img/shishatabak/alfakher3.svg" data-tabak="Al-Fakher">Traube-Minze(Al-Fakher)</option>
+												<option data-img="img/shishatabak/alfakher1.svg" data-tabak="Al-Fakher">Doppel-Apfel(Al-Fakher)</option>
+												<option data-img="img/shishatabak/alfakher2.svg" data-tabak="Al-Fakher">Traube-Minze(Al-Fakher)</option>
 												<option data-img="img/product-preview.png" data-tabak="Kilim">Zitrone-Minze(Kilim)</option>
 												<option data-img="img/shishatabak/pintaya.svg" data-tabak="Royal">Pintaya(Royal)</option>
 												<option data-img="img/shishatabak/coldpeah.svg" data-tabak="Gama">Cold-Peach(Gama)</option>
@@ -607,7 +607,7 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)) no-repeat center center;">
 <!-- /////// MENU  /////////// -->
 
 <div id="menu" class="container-fluid " style="background: linear-gradient(
-	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/shisha.svg) no-repeat center center;">
+	rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/shisha2.svg) no-repeat center center;">
 	<br>
 	<br>
 	<br>
@@ -728,8 +728,8 @@ rgb(255, 255, 255, 0.9),rgba(255, 255, 255, 0.9)),url(img/people.svg) no-repeat 
 <!--///////// FOOTER ///////////-->
 <hr class="style-two">
 <footer class="container-fluid text-center" style="color: var(--grundfarbe); padding-bottom: 20px;">
-  <p><a href="#0" class="links" id="modal-trigger" data-type="cd-modal-trigger">Datenschutzerklärung</a></p>
-  <p><a href="#myModal" class="links" id="modal-trigger2" data-toggle="modal">Impressum</a></p>
+  <p><a style="font-size: 12px;" href="#0" class="links" id="modal-trigger" data-type="cd-modal-trigger">Datenschutzerklärung</a></p>
+  <p><a style="font-size: 12px;" href="#myModal" class="links" id="modal-trigger2" data-toggle="modal">Impressum</a></p>
   <hr class="style-two">
   <p>Copyright © 2019 <a style="color: var(--grundfarbe)" href="#" title="Sahir Alias GmbH">Sahir Alias GmbH</a>. </br>Alle Rechte vorbehalten.</p>
 </footer>
